MODDICORE-508 - MARC Bib Updates mapping - 'Delete' action functionality (#440)